# online_store_data_analysis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Task1.sql  Task2.sql  Task3.sql  Task4-SQL connection Extracting data as CSV file.ipynb  Task4.ipynb  Task5.ipynb  config.json  customers.xlsx  productlines.xlsx
notebooks/Exported Excel Files/: customers.xlsx  employees.xlsx  offices.xlsx  orderdetails.xlsx  orders.xlsx  payments.xlsx  productlines.xlsx  products.xlsx
online_store_data_analysis/: __init__.py  dataset.py  features.py  plots.py
online_store_data_analysis/modeling/: predict.py  train.py
